--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,26 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;700&family=Lato:wght@300;400;700&display=swap');
+
+
+:root {
+  --color-base-very-light: #F4FAF3;
+  --color-base-ligth: #9BDA9B;
+  --color-base: #43A443;
+  --color-base-dark: #265527;
+  --color-base-very-dark: #0D260E;
+
+  --grey-50: #fafafa;
+  --grey-100: #efefef;
+  --grey-200: #dcdcdc;
+  --grey-300: #bdbdbd;
+  --grey-400: #989898;
+  --grey-500: #7c7c7c;
+  --grey-600: #656565;
+  --grey-700: #525252;
+  --grey-800: #464646;
+  --grey-900: #3d3d3d;
+  --grey-950: #292929;
+
+  --font-title: 'Barlow', sans-serif;
+  --font-text: 'Lato', sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
