--- a/src/components/style/Hero.module.css
+++ b/src/components/style/Hero.module.css
@@ -1,4 +1,4 @@
-.heroConteiner {
+.heroContainer {
   margin-bottom: 2.5rem;
 }
 
@@ -11,11 +11,6 @@
 
 .image {
   width: 11.25rem;
-}
-
-.image img {
-  aspect-ratio: 1/1;
-  border-radius: 0.5rem;
 }
 
 .content {
@@ -45,6 +40,7 @@
   padding: 0.25rem 0.5rem;
   border-radius: 0.75rem;
   font-family: var(--font-text);
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -101,11 +97,11 @@
 }
 
 @media (max-width: 40.625rem) {
-  .heroConteiner {
+  .heroContainer {
     margin-bottom: 1.5rem;
   }
 
-  .hero {
+  .hero { 
     flex-direction: column;
   }
 
@@ -124,5 +120,9 @@
   .button {
     width: 100%;
     justify-content: center;
+  }
+
+  .feedbackHours {
+    font-size: 0.75rem;
   }
 }
