--- a/src/components/styles/home/Cart.module.css
+++ b/src/components/styles/home/Cart.module.css
@@ -6,6 +6,7 @@
 .cart {
   border: 1px solid var(--color-grey-200);
   border-radius: 0.5rem;
+  background: var(--color-grey-50);
 }
 
 .header {
@@ -131,7 +132,35 @@
 
 @media (max-width: 56.25rem) {
   .cartContainer {
-    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(0 0 0 / .3);
+    padding-top: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    backdrop-filter: blur(5px);
+  }
+
+  .cart {
+    width: 85%;
+    animation: showCart .3s ease;
+  }
+
+  @keyframes showCart {
+    from {
+      opacity: 0;
+      transform: scale(.8);
+    }
+  
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
   }
 
   .title {
@@ -169,5 +198,7 @@
 
   .closeOrder {
     font-size: 1rem;
+    width: 100%;
+    text-align: center;
   }
 }
