--- a/src/components/styles/home/Cart.module.css
+++ b/src/components/styles/home/Cart.module.css
@@ -1,9 +1,13 @@
 .cartContainer {
   /* border: 1px solid red; */
   padding-top: 3.125rem;
+  position: relative;
 }
 
 .cart {
+  position: sticky;
+  top: 3.125rem;
+  max-width: 100%;
   border: 1px solid var(--color-grey-200);
   border-radius: 0.5rem;
   background: var(--color-grey-50);
@@ -136,7 +140,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: rgb(0 0 0 / .3);
     padding-top: inherit;
     display: flex;
@@ -148,6 +152,7 @@
 
   .cart {
     width: 85%;
+    position: initial;
     animation: showCart .3s ease;
   }
 
