--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,22 @@ img {
   padding: 0 4.25rem;
 }
 
+.animeModal {
+  animation: showModal .3s ease;
+}
+
+@keyframes showModal {
+  from {
+    opacity: 0;
+    transform: scale(.8);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 @media (max-width: 40.625rem) {
   .sectionContainer {
     padding: 0 1.25rem;
